--- a/johnTutsEventEmiiter/views/new-page.html
+++ b/johnTutsEventEmiiter/views/new-page.html
@@ -11,6 +11,6 @@
   <body>
     <h1>New Page</h1>
     <br />
-    <img src="../img/img1.jpg" />
+    <img src="/css/img/img1.jpg" alt="Image" />
   </body>
 </html>
