--- a/johnTutsEventEmiiter/views/subdir/test.html
+++ b/johnTutsEventEmiiter/views/subdir/test.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Test Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Test Page in /subdir/</h1>
-</body>
-
+  </body>
 </html>
